--- a/public/gifrater.html
+++ b/public/gifrater.html
@@ -6,7 +6,17 @@
     <link rel="stylesheet" href="./css/gifrater.css">
 
 </head>
-    
-
+<body>
+    <body>
+        <div class="wrapper">
+            <header>
+                <h1>GIF Combination Manager</h1>
+            </header>
+            <div class="card">
+                <h2>GIF Combinations</h2>
+                <div id="output" class="output card-body"></div>
+            </div>
+        </div>
     <script src="./js/gifrater.js"></script>
+</body>
 </html>
