--- a/public/gifrater.html
+++ b/public/gifrater.html
@@ -2,21 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/gifrater.css">
-
+    <title>GIF Rater</title>
 </head>
 <body>
-    <body>
-        <div class="wrapper">
-            <header>
-                <h1>GIF Combination Manager</h1>
-            </header>
-            <div class="card">
-                <h2>GIF Combinations</h2>
-                <div id="output" class="output card-body"></div>
-            </div>
-        </div>
+    <div class="gif-container">
+        <img src="" alt="GIF 1" id="gif1">
+        <img src="" alt="GIF 2" id="gif2">
+    </div>
+    
     <script src="./js/gifrater.js"></script>
 </body>
 </html>
