--- a/public/landingpage.html
+++ b/public/landingpage.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/landingpage.css">
-
+    <title>Pixelmaker</title>
+    <title>Landing Page</title>
 </head>
-
-
+<body>
+    <header>
+        <nav>
+            <div class="nav-right">
+                <a href="../views/layouts/main.handlebars" class="login-btn">Login</a>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section class="hero">
+            <h1>Welcome to PIXELMAKER</h1>
+            <p>Your journey to greatness starts here!</p>
+            <button onclick="window.location.href='../views/layouts/main.handlebars'">Get Started Today!</button>
+        </section>
+    </main>
     <script src="./js/landingpage.js"></script>
+</body>
 </html>
