--- a/public/landingpage.html
+++ b/public/landingpage.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <section class="hero">
-            <h1>Welcome to PIXELMAKER</h1>
+            <h1>Welcome to Gif Rater</h1>
             <p>Your journey to greatness starts here!</p>
             <button onclick="window.location.href='../views/layouts/main.handlebars'">Get Started Today!</button>
         </section>
